--- a/doc/UserGuide/ice.tex
+++ b/doc/UserGuide/ice.tex
@@ -982,7 +982,7 @@ steep gradients and solve Eulers equations.
 \item [Input file name:] \hfill \TT{rieman\_sm.ups}
 \item [Command used to run input file:]\hfill \TT{sus inputs/UintahRelease/ICE/shockTube.ups}
 \item [Postprocessing command:]\hfill \\
-\TT{inputs/UintahRelease/ICE/plot\_shockTube\_1L shockTube.uda y}\\
+\TT{scripts/ICE/plot\_shockTube\_1L shockTube.uda y}\\
 This Octave script will generate a postscript file shockTube.ps
 
 \item [Simulation Domain:]\hfill    1 x .001 x .001 m
@@ -1111,7 +1111,7 @@ $(p=0.1, \rho=0.125, u=0, v=0).$  The fluid was an ideal, inviscid, polytropic g
       \TT{mpirun -np 4 sus inputs/UintahRelease/ICE/Explosion.ups}
 \item [Visualization net file:]\hfill \TT{inputs/UintahRelease/ICE/Explosion.session}\\
 \item [Postprocessing command:]\hfill \\
-\tt inputs/ICE/Scripts/plot\_explosion\_AMR Explosion\_AMR.uda y \normalfont \\
+\tt scripts/ICE/plot\_explosion\_AMR Explosion\_AMR.uda y \normalfont \\
 This Octave script will generate a postscript file explosion\_AMR.ps
 
 
