Fixed postprocessing command for the Shock Tube AMR ICE example. -Jake

--- a/doc/UserGuide/ice.tex
+++ b/doc/UserGuide/ice.tex
@@ -1017,7 +1017,7 @@ results at time $t = 5msec$.
 \item [Command used to run input file:]\hfill\\ \TT{sus
 inputs/UintahRelease/ICE/shockTube\_AMR.ups}
 \item [Postprocessing command:]\hfill \\
-\TT{inputs/UintahRelease/ICE/plot\_shockTube\_AMR shockTube\_AMR.uda y}\\
+\TT{../../src/scripts/ICE/plot\_shockTube\_AMR shockTube\_AMR.uda y}\\
 This Octave script will generate a postscript file shockTube\_AMR.ps
 
 \item [Simulation Domain:]\hfill    1 x .001 x .001 m
