--- a/doc/InstallationGuide/installation_guide.tex
+++ b/doc/InstallationGuide/installation_guide.tex
@@ -271,9 +271,18 @@ the -fPIC compile option.  After unpacking the hypre tar file, edit
 the Makefile in \tt hypre-2.4.0/src/lapack \normalfont and add the
 -fPIC to line 128.  It should look like the following:
 
+\emph{Note: This may have been fixed... if there is
+  '${SHARED_COMPILE_FLAG}' on the compile line, then it should be good
+to go.}
+
 \begin{verbatim}
 ${CC} -c -fPIC dlamch.c
 \end{verbatim}
+
+\emph{Note: However, it looks like another problem may have been
+  introduced.  /src/FEI_mv/SuperLU/SRC/Makefile line 209
+  $(SHARED_COMPILE_FLAG) needs to be added to the superlu_timer.o
+  build line...}
 
 Depending on the location of the MPI libraries, i.e. location of mpi.h
 and libmpi.so, the configure line for hypre should look like this:
@@ -313,6 +322,9 @@ the Uintah team.
 \subsection{Teem Installation}
 \label{subsec:teem}
 
+\emph{Note, Teem is only needed for UdaToNrrd (which is used to
+  translate UDA into NRRD files for visualization with the Manta or
+  RTRT ray tracers.  Users of VisIt do not need to install Teem.}
 
 Download Teem from
 \url{http://teem.sourceforge.net/download/index.html}.  Teem uses
@@ -350,9 +362,9 @@ ln -s ../lib/libteem.so libteem.so
 
 \subsection{VisIt Installation}
 
-The latest official release of VisIt is 2.0.0.  In this release, their build
+The latest official release of VisIt is 2.0.1.  The VisIt build
 system has been changed to CMake, so building the UDA reader plugin for
-previous versions of VisIt will no longer be supported, and CMake is now also
+previous versions of VisIt (1.x) will no longer be supported, and CMake is now also
 required to build the plugin.
 
 The UDA reader plugin must be built against an installed version of VisIt. 
@@ -368,8 +380,9 @@ the svn repository maintained at NERSC.  The svn code may have bug fixes that
 are not in the official releases, but may have additional bugs and should not
 be considered stable.  The svn repository also includes all of the third party
 libraries that VisIt requires.  The script used to build VisIt is setup to 
-automatically download these dependencies, but often fails.
-
+automatically download these dependencies, but often fails.  In is
+highly recommended to NOT use the SVN version of VisIt, but instead us
+one of the official tarball releases.
 
 \subsubsection{Caveats}
 \label{subsec:VisIt_Caveats}
@@ -437,6 +450,9 @@ SET(CMAKE_CXX_COMPILER /home/js9/bin/g++)
 There are two ways to get the source for VisIt: download a packaged version from
 the VisIt webpage, or checkout a copy from the NERSC repository.
 
+\subsubsection{Downloading VisIt Tarball}
+\label{subsec:VisItVersion2_tarball}
+
 If using a packaged version, download the source tarball (version 2.0
 or later) and the build\_visit script from
 https://wci.llnl.gov/codes/visit/source.html.  Extract the tarball,
@@ -444,11 +460,11 @@ make a build directory inside the visit directory, and copy
 build\_visit into it:
 
 \begin{verbatim}
-tar xzf visit2.0.0.tar.gz
-cd visit2.0.0
+tar xzf visit2.0.1.tar.gz
+cd visit2.0.1
 mkdir build
 cd build
-cp ../../build_visit .
+cp ../src/svn_bin/build_visit .
 chmod +x build_visit
 \end{verbatim}
 
@@ -460,8 +476,22 @@ delete or rename the data directory:
 mv ../data ../data_ignore
 \end{verbatim}
 
+\emph{NOTE, instructions continue below at ~\ref{subsec:VisItVersion2_common}.}
 
-If building from svn source, check out the code from the svn repository:
+\subsubsection{Downloading VisIt SVN}
+\label{subsec:VisItVersion2_svn}
+
+\emph{Please use the most recent VisIt release tarball instead of
+  building from SVN unless there is a good reason not to.}
+
+If building from SVN source, check out the code from the SVN repository:
+
+\emph{Note, it can take a long time (several hours) to do the initial
+  check out.  Additionally, VisIt requires a lot of disk space (~7 GB
+  - ~2.4 GB for thirdparty libraries, ~6.8 GB for VisIt source code
+  and VisIt compilation, and ~364 MB for the installed directory),
+  so make sure you have enough. }
+
 
 \begin{verbatim}
 mkdir ``visit_src_dir''
@@ -491,9 +521,17 @@ cp ../third_party/*.tar.gz .
 cp ../third_party/*.tgz .
 \end{verbatim}
 
-The remaining directions are the same for both svn and packaged builds.
+\subsubsection{Common Instructions}
+\label{subsec:VisItVersion2_common}
 
-Run the 'build\_visit' script (in order to just build the dependencies):
+The remaining directions are the same for both SVN and packaged builds.
+
+Run the 'build\_visit' script (Note, this just builds the VisIt dependency
+libraries.):
+
+\emph{Note, the following command will assume the generic compilers on
+  the system.  If you need specific compilers, then add '--cc gcc --cxx g++'.
+}
 
 \begin{verbatim}
 ./build_visit --makeflags -j# --no-visit
@@ -503,13 +541,18 @@ Replace '\#' with the number of processors you want to use.  This
 will launch the normal dialog window, where you should select
 the ``Parallel'' option.  (Use the arrow keys and the space bar.)
 
-At the end of this process, cmake a config file would be generated. It will
+By the end of this process, cmake will have generated a config file. It will
 be named ``your\_machine\_name''.cmake. Copy this into the
 ``../src/config-site'' folder:
 
 \begin{verbatim}
 cp ``your_machine_name''.cmake ../src/config-site
 \end{verbatim}
+
+\emph{Note, on some machines, the log in node will change each time
+  you log in.  You must make sure the name of the (above) generated
+  machine.cmake file corresponds exactly to the machine you are
+  building on.}
 
 
 Before you run cmake, check your ``your\_machine\_name''.cmake
@@ -521,8 +564,11 @@ VISIT_OPTION_DEFAULT(VISIT_MPI_COMPILER /usr/bin/mpic++)
 \end{verbatim}
 
 Change directory to the ``src'' folder and run cmake (version 2.8 or
-later of cmake is required for VisIt 2.0, which is included in the 
-third party dependencies that the build\_visit script builds:
+later of CMake is required for VisIt 2.0).  Note, VisIt builds CMake for
+you, so if your system CMake isn't new enough, use the one
+in the VisIt 'build' directory.
+
+\emph{Note, the '.' at the end of the cmake command below is necessary!}
 
 \begin{verbatim}
 cd ../src
@@ -547,6 +593,22 @@ may need to be root to install it, depending on where your
 
 As usual, cross your fingers. If everything goes fine, you can find
 the visit executable in ``visit\_bin\_dir''/bin.
+
+\emph{WARNING: Until a bug in the VisIt make system is fixed, you have
+to manually update
+/path/to/installation/2.0.1/linux-x86_64/include/PluginVsInstall.cmake
+and comment out these lines:
+
+\begin{verbatim}
+# Force the same compiler as VisIt, if we can
+#IF(EXISTS /usr/bin/gcc4)
+#    SET(CMAKE_C_COMPILER /usr/bin/gcc4)
+#ENDIF(EXISTS /usr/bin/gcc4)
+#IF(EXISTS /usr/bin/g++4)
+#    SET(CMAKE_CXX_COMPILER /usr/bin/g++4)
+#ENDIF(EXISTS /usr/bin/g++4)
+\end{verbatim}
+}
 
 
 \subsubsection{Parallel OS X build}
