--- a/doc/UserGuide/arches.bib
+++ b/doc/UserGuide/arches.bib
@@ -50,7 +50,7 @@
   title        = {Energy cascade in large eddy simulation of turbulent fluid flow},
   journal      = {Advances in Geophysics},
   year         = 1974,
-  volume       = 18A,
+  volume       = 18,
   pages        = {237-248},
 }
 
@@ -167,7 +167,7 @@ pages = {122-136},
   title        = {Soot Formation in Combustion: Mechanisms and Models},
   publisher    = {Springer Series in Chemical Physics, {\bf 59}, Springer-Verlag Berlin},
   year         = 1994,
-  %volume       = 59,
+  volume       = 59,
 }
 
 %FIX This is a series, so I decided to input it as journal with an editor and publisher (Should it be INBOOK instead?). The title is the title of vol. 59 in the series. The title of the chapter by Frenklach is "Soot Particle Formation"
@@ -567,8 +567,8 @@ pages = {122-136},
   author       = {W. L. Grosshandler},
   title        = {RADCAL: A Narrow-Band Model for Radiation Calculations in a Combustion Environment},
   institution  = {1402},
-  year         = {NIST, 1993}
-  %note         = {NIST},
+  year         = {1993},
+  note         = {NIST},
 }
 
 @ARTICLE{Grumer27,
