Fixed command used to run input file   -Jake the Snake

--- a/doc/UserGuide/mpm.tex
+++ b/doc/UserGuide/mpm.tex
@@ -3086,7 +3086,7 @@ a diameter of 6 mm.  The cylinder rebounds from the anvil after 100 $\mu$s.
 \begin{description} 
 \item [Component used:] \hfill MPM
 \item [Input file name:] \hfill taylorImpact.ups
-\item [Command used to run input file:]\hfill sus taylorImpact.ups
+\item [Command used to run input file:]\hfill sus ../../src/StandAlone/inputs/UintahRelease/MPM/taylorImpact.ups
 \item [Simulation Domain:]\hfill 8 mm x 33 mm x 8 mm
 
 \item [Cell Spacing:]\hfill \\ 
