Fixed all commands used to run input files.  -Jake the Snake

--- a/doc/UserGuide/mpm.tex
+++ b/doc/UserGuide/mpm.tex
@@ -3086,7 +3086,7 @@ a diameter of 6 mm.  The cylinder rebounds from the anvil after 100 $\mu$s.
 \begin{description} 
 \item [Component used:] \hfill MPM
 \item [Input file name:] \hfill taylorImpact.ups
-\item [Command used to run input file:]\hfill sus ../../src/StandAlone/inputs/UintahRelease/MPM/taylorImpact.ups
+\item [Command used to run input file:]\hfill sus inputs/UintahRelease/MPM/taylorImpact.ups
 \item [Simulation Domain:]\hfill 8 mm x 33 mm x 8 mm
 
 \item [Cell Spacing:]\hfill \\ 
@@ -3154,7 +3154,7 @@ below.
 \begin{description} 
 \item [Component used:] \hfill MPM
 \item [Input file name:] \hfill inclinedPlaneSphere.ups
-\item [Command used to run input file:]\hfill sus inclinedPlaneSphere.ups
+\item [Command used to run input file:]\hfill sus inputs/UintahRelease/MPM/inclinedPlaneSphere.ups
 \item [Simulation Domain:]\hfill    12.0 x 2.0 x 4.8 m
 
 \item [Cell Spacing:]\hfill \\ 
@@ -3340,7 +3340,7 @@ section below that.
 \begin{description} 
 \item [Component used:] \hfill MPM
 \item [Input file name:] \hfill holePlate.ups
-\item [Command used to run input file:]\hfill sus holePlate.ups
+\item [Command used to run input file:]\hfill sus inputs/UintahRelease/MPM/holePlate.ups
 \item [Simulation Domain:]\hfill 5.0 m x 5.0 m x 0.1 m
 
 \item [Cell Spacing:]\hfill \\ 
@@ -3394,7 +3394,7 @@ materials.
 \begin{description}
 \item [Component used:] \hfill MPM
 \item [Input file name:] \hfill WSphereIntoSteel.axi.ups
-\item [Command used to run input file:]\hfill sus WSphereIntoSteel.axi.ups
+\item [Command used to run input file:]\hfill sus inputs/UintahRelease/MPM/WSphereIntoSteel.axi.ups
 \item [Simulation Domain:]\hfill 1.0 cm x 1.5 cm x axisymmetric
 
 \item [Cell Spacing:]\hfill \\
