Fixed command used to run and input file name.  -Jake the Snake

--- a/doc/UserGuide/mpmice.tex
+++ b/doc/UserGuide/mpmice.tex
@@ -272,8 +272,8 @@ without the difficulty of generating a body fitted mesh around that object.
 \subsubsection*{\underline{Simulation Specifics}}
 \begin{description}
 \item [Component used:] \hfill rmpmice (Rigid MPM-ICE)
-\item [Input file name:] \hfill Mach2Wedge.ups
-\item [Command used to run input file:]\hfill sus Mach2Wedge.ups
+\item [Input file name:] \hfill Mach2wedge.ups
+\item [Command used to run input file:]\hfill sus inputs/UintahRelease/MPMICE/Mach2wedge.ups
 (Note: The files wedge40.pts and wedge40.tri must also be copied to
 the same directory as sus.)
 
