Fix to configure line, optimize should be -O3, not -03.  --Cherie

--- a/doc/InstallationGuide/installation_guide.tex
+++ b/doc/InstallationGuide/installation_guide.tex
@@ -932,7 +932,7 @@ enter the following configure line:
 
 \begin{verbatim}
 ../src/configure                              \
-          '--enable-optimize=-03 -mfpmath=sse' \
+          '--enable-optimize=-O3 -mfpmath=sse' \
           --enable-assertion-level=0          \
           --with-teem=/usr/local              \
           --with-visit=/home/user_name/VisIt/
