--- a/doc/UserGuide/mpm.tex
+++ b/doc/UserGuide/mpm.tex
@@ -3024,7 +3024,7 @@ This functionality is defined in a text file in the order:
 \end{verbatim}  
 
 During the first timestep in which the current physical time plus the calculated 
-\Delta t for the current timestep exceeds the time specified for a color block, the 
+$\Delta$t for the current timestep exceeds the time specified for a color block, the 
 particles of that color will be translated along the three coordinates and given 
 a new velocity.  Each line in the file can be used to define a unique transformation
 for one particle color group.  For instance, if a file contained the line:
